syntax = "proto3";

package proto;

service DiscoveryAsBoot {
    rpc PreJoin(PreJoinRequest) returns (PreJoinResponse) {}
}

message PreJoinRequest {
    string name = 1;
    string host = 2;
    string client = 3;
} 

message PreJoinResponse {
    int64 result = 1;
    string message = 2;
    map<string, string> curnodes = 3;
}